--- a/src/1_Presentation/1.4_Desktop/Windows/CrossBackEnd.UI.Desktop.Windows.App/App.xaml
+++ b/src/1_Presentation/1.4_Desktop/Windows/CrossBackEnd.UI.Desktop.Windows.App/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:CrossBackEnd.UI.Desktop.Windows.App"
-             StartupUri="MainWindow.xaml">
+             StartupUri="/Views/_MainWindow.xaml">
     <Application.Resources>
          
     </Application.Resources>
