Novos progressos!! Foi criado o CrossPlatform.Core e está funcional o MVVM com Windows Desktop WPF
Vou iniciar a implementação do Command para ser possível realizar ações através da View para a Controller

--- a/src/1_Presentation/1.4_Desktop/Windows/CrossBackEnd.UI.Desktop.Windows.App/App.xaml
+++ b/src/1_Presentation/1.4_Desktop/Windows/CrossBackEnd.UI.Desktop.Windows.App/App.xaml
@@ -1,8 +1,11 @@
-﻿<Application x:Class="CrossBackEnd.UI.Desktop.Windows.App.App"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:CrossBackEnd.UI.Desktop.Windows.App"
-             StartupUri="/Views/_MainWindow.xaml">
+﻿<Application 
+    x:Class="CrossBackEnd.UI.Desktop.Windows.App.App"
+    
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:local="clr-namespace:CrossBackEnd.UI.Desktop.Windows.App"
+    StartupUri="/Views/_MainWindow.xaml">
+    
     <Application.Resources>
          
     </Application.Resources>
