--- a/src/1_Presentation/1.4_Desktop/Windows/CrossBackEnd.UI.Desktop.Windows.App/Views/GeoLocation/CountryManagerWindow.xaml
+++ b/src/1_Presentation/1.4_Desktop/Windows/CrossBackEnd.UI.Desktop.Windows.App/Views/GeoLocation/CountryManagerWindow.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="CrossBackEnd.UI.Desktop.Windows.App.Views.GeoLocation.ListCountriesWindow"
+﻿<Window x:Class="CrossBackEnd.UI.Desktop.Windows.App.Views.GeoLocation.CountryManagerWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CrossBackEnd.UI.Desktop.Windows.App.Views.GeoLocation"
         mc:Ignorable="d"
-        Title="ListCountriesWindow" Height="400" Width="785.294">
+        Title="CountryManagerWindow" Height="400" Width="785.294">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="40*"/>
@@ -13,9 +13,9 @@
         </Grid.ColumnDefinitions>
         <StackPanel Grid.Column="1" Margin="10">
             <Label Content="Country Name:"/>
-            <TextBox/>
+            <TextBox Text="{Binding CountryViewModel.Name, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
             <Label Content="Abbreviation:"/>
-            <TextBox Width="70" HorizontalAlignment="Left"/>
+            <TextBox Text="{Binding CountryViewModel.Abbreviation, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Width="70" HorizontalAlignment="Left"/>
             <StackPanel Orientation="Horizontal" Height="30" HorizontalAlignment="Center">
                 <Button Content="Save" Width="70" Margin="0,0,50,0" Background="Green" Foreground="White"/>
                 <Button Content="Delete" Width="50" Background="DarkRed" Foreground="White"/>
