Inicio Modificação da CountryManagerPage para trabalhar com Search Bar

--- a/src/1_Presentation/1.1_CrossPlatform/CrossBackEnd.CrossPlatform.UI/Bootstrap/Android/AndroidRootPage.xaml
+++ b/src/1_Presentation/1.1_CrossPlatform/CrossBackEnd.CrossPlatform.UI/Bootstrap/Android/AndroidRootPage.xaml
@@ -11,7 +11,7 @@
     
     <!-- Menu -->
     <MasterDetailPage.Master>
-        <menu:MainMenuPage />
+        <menu:MainMenuPage x:Name="MasterPage"/>
     </MasterDetailPage.Master>
 
     <!-- Main Body -->
