--- a/src/1_Presentation/1.1_CrossPlatform/CrossBackEnd.CrossPlatform.UI/App.xaml
+++ b/src/1_Presentation/1.1_CrossPlatform/CrossBackEnd.CrossPlatform.UI/App.xaml
@@ -5,5 +5,19 @@
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     >
-    
+    <Application.Resources>
+        <ResourceDictionary>
+            <Style x:Key="StyleBaseLabel" TargetType="{x:Type Label}">
+                <Setter Property="Margin" Value="0"/>
+                <Setter Property="VerticalOptions" Value="Center"/>
+            </Style>
+            
+            <Style x:Key="StyleBaseTextBox" TargetType="{x:Type Entry}">
+                <Setter Property="Margin" Value="0"/>
+                <Setter Property="VerticalOptions" Value="Center"/>
+                <Setter Property="HorizontalOptions" Value="Center"/>
+            </Style>
+            
+        </ResourceDictionary>
+    </Application.Resources>
 </Application>
