--- a/src/1_Presentation/1.1_CrossPlatform/CrossBackEnd.CrossPlatform.UI/Views/_Home/HomePage.xaml
+++ b/src/1_Presentation/1.1_CrossPlatform/CrossBackEnd.CrossPlatform.UI/Views/_Home/HomePage.xaml
@@ -2,11 +2,10 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="CrossBackEnd.CrossPlatform.UI.Views._Home.HomePage">
-    <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Home Page"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
-        </StackLayout>
-    </ContentPage.Content>
+
+    <StackLayout Orientation="Vertical">
+        <Label Text="Welcome to DEMO Cross Back End!!" VerticalOptions="Start" HorizontalOptions="Center" Margin="10,20,10,20"/>
+        <Button x:Name="txtCountries" Text="Manager Countries!!" VerticalOptions="Center" HorizontalOptions="Center"/>
+    </StackLayout>
+    
 </ContentPage>
