--- a/src/1_Presentation/1.1_CrossPlatform/CrossBackEnd.CrossPlatform.UI/Views/_Menus/MainMenuPage.xaml
+++ b/src/1_Presentation/1.1_CrossPlatform/CrossBackEnd.CrossPlatform.UI/Views/_Menus/MainMenuPage.xaml
@@ -1,12 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="CrossBackEnd.CrossPlatform.UI.Views._Menus.MainMenuPage">
-    <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Menuuuu!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
-        </StackLayout>
-    </ContentPage.Content>
+<ContentPage 
+    x:Class="CrossBackEnd.CrossPlatform.UI.Views._Menus.MainMenuPage"
+    
+    xmlns="http://xamarin.com/schemas/2014/forms"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    Title="MainMenu"
+    >
+
+    <StackLayout>
+        <Label Text="Menuuuu!"
+            VerticalOptions="CenterAndExpand" 
+            HorizontalOptions="CenterAndExpand" />
+    </StackLayout>
 </ContentPage>
