--- a/src/1_Presentation/1.1_CrossPlatform/CrossBackEnd.CrossPlatform.UI/Views/_Menus/MainMenuPage.xaml
+++ b/src/1_Presentation/1.1_CrossPlatform/CrossBackEnd.CrossPlatform.UI/Views/_Menus/MainMenuPage.xaml
@@ -4,7 +4,7 @@
     
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    Title="MainMenu"
+    Title="MainMenu" BackgroundColor="LightGray"
     >
 
     <StackLayout>
