--- a/src/1_Presentation/1.1_CrossPlatform/CrossBackEnd.CrossPlatform.UI/Views/_Home/HomePage.xaml
+++ b/src/1_Presentation/1.1_CrossPlatform/CrossBackEnd.CrossPlatform.UI/Views/_Home/HomePage.xaml
@@ -5,7 +5,7 @@
 
     <StackLayout Orientation="Vertical">
         <Label Text="Welcome to DEMO Cross Back End!!" VerticalOptions="Start" HorizontalOptions="Center" Margin="10,20,10,20"/>
-        <Button x:Name="txtCountries" Text="Manager Countries!!" VerticalOptions="Center" HorizontalOptions="Center"/>
+        <Button x:Name="txtCountries" Text="Manager Countries!!" Command="{Binding ShowCountryPageCommand}" VerticalOptions="Center" HorizontalOptions="Center"/>
     </StackLayout>
     
 </ContentPage>
